# redis-manager-rust

./: Cargo.toml  application.yml
backend/: Cargo.toml  application.yml
backend/sql/: 2022-01-04.sql  2022-01-06.sql
backend/src/: lib.rs
backend/src/config/: app_config.rs  auth.rs  constant.rs  mod.rs
backend/src/domain/dto/: mod.rs  redis_info.rs  user.rs
backend/src/domain/entity/: mod.rs  redis_info.rs  redis_node_info.rs  user.rs
backend/src/domain/vo/: mod.rs  redis_info.rs  redis_node_info.rs  user.rs
backend/src/enums/: mod.rs
backend/src/mapper/: mod.rs
backend/src/rest/: mod.rs  redis_info_rest.rs  user1_rest.rs  user_rest.rs
backend/src/service/: cache_service.rs  mem_service.rs  mod.rs  redis_info_service.rs  redis_node_info_service.rs  redis_service.rs  user1_service.rs  user_service.rs
backend/src/service/cache_impl/: mem_service.rs  mod.rs  redis_service.rs
backend/src/util/: mod.rs  time_util.rs
frontend/: package.json
frontend/config/: routes.ts
frontend/src/: app.tsx
frontend/src/locales/: en-US.ts  zh-CN.ts
frontend/src/locales/zh-CN/: menu.ts  redisInfo.ts
frontend/src/pages/RedisManage/Query/: index.tsx
frontend/src/pages/RedisManage/RedisInfo/: index.tsx  update.tsx
frontend/src/pages/RedisManage/RedisInfo/components/: UpdateForm.tsx
frontend/src/pages/User/Login/: index.tsx
frontend/src/pages/user/Login/: index.tsx
frontend/src/services/ant-design-pro/: api.ts  index.ts  redisApi.ts  redisType.ts  userApi.ts  userType.ts
react/src/pages/user/Login/: index.tsx
react/src/services/ant-design-pro/: index.ts  userApi.ts  userType.ts
src/: lib.rs
src/config/: app_config.rs  auth.rs  log.rs
src/controller/: mod.rs
src/domain/: mod.rs
src/domain/dto/: user.rs  user1.rs
src/domain/entity/: user.rs  user1.rs
src/domain/vo/: mod.rs  user.rs  user1.rs
src/entity/: mod.rs
src/mapper/: mod.rs
src/mix/: error.rs  mod.rs
src/rest/: mod.rs  user1_rest.rs  user2_rest.rs  user_rest.rs
src/service/: cache_service.rs  mod.rs  redis_service.rs  user1_service.rs  user_service.rs
