[package]
name = "redis-manager-rust"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
poem = "1.2.16"
poem-openapi = { version = "1.2.17", features = ["swagger-ui", "email"] }
tokio = { version = "1", features = ["macros", "rt-multi-thread"] }
slab = "0.4.5"

tracing= {version="0.1", default-features = false}
rbatis = { version = "3", default-features = false, features = ["runtime-async-std-rustls", "mysql"] }

# rbson (rabtis required)
serde = { version = "1", features = ["derive"] }
rbson = "2.0"

# logging service(rabtis required)
log = "0.4"
fast_log = { version = "1.3", features = ["gzip", "zip"] }

getset = "0.1.2"
serde_json = "1"

lazy_static = "1"
async-trait = "0.1"

redis = { version = "*", features = ["async-std-comp"] }

yaml-rust = "0.4"