[package]
name = "redis-manager-rust"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
poem = {version = "1", features = ["opentelemetry", "prometheus"]}
poem-openapi = { version = "1", features = ["swagger-ui", "email","chrono"] }
tokio = { version = "1", features = ["macros", "rt-multi-thread"] }
tokio-test = "0.4.*"
slab = "0.4.5"

tracing= "0.1"
tracing-subscriber = "0.3"
tracing-appender = "0.2"
#tracing-log = "0.1"
#tracing-opentelemetry = "0.16"
#opentelemetry = { version = "0.16", default-features = false, features = ["trace"] }
#opentelemetry-jaeger = { version = "0.15.0", features = ["rt-tokio", "collector_client"] }


rbatis = { version = "3", default-features = false, features = ["runtime-async-std-rustls", "mysql"] }


# rbson (rabtis required)
serde = { version = "1", features = ["derive"] }
serde_json = "1"

rbson = "2.0"

# logging service(rabtis required)
log = "0.4"

getset = "0.1.2"


lazy_static = "1"
async-trait = "0.1"

redis = { version = "*", features = ["tokio-comp","tokio-native-tls-comp"] }

yaml-rust = "0.4"

chrono = "0.4"

rand = "0.8"