[package]
name = "redis-manager-rust"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
poem = { version = "1", features = ["opentelemetry", "prometheus"] }
poem-openapi = { version = "1", features = ["swagger-ui", "email", "chrono"] }
tokio = { version = "1", features = ["macros", "rt-multi-thread"] }

tracing = "0.1"
tracing-subscriber = "0.3"
tracing-appender = "0.2"
#tracing-log = "0.1"
#tracing-opentelemetry = "0.16"
#opentelemetry = { version = "0.16", default-features = false, features = ["trace"] }
#opentelemetry-jaeger = { version = "0.15.0", features = ["rt-tokio", "collector_client"] }

#json序列化需求
serde = { version = "*", features = ["derive"] }
serde_json = "*"

#orm框架
rbatis = { version = "3", default-features = false, features = ["runtime-tokio-rustls", "mysql"] }
# rbson (rabtis required)
rbson = "2.0"
# logging service(rabtis required)
log = "0.4"

getset = "0.1.2"
#全局动态变量支持动态初始化
lazy_static = "*"
#trait支持异步
async-trait = "*"
#redisc客户端
redis = { version = "*", features = ["tokio-comp", "tokio-native-tls-comp"] }

yaml-rust = "0.4"
#时间库
chrono = "*"
#随机库
rand = "*"
# 枚举类型to_string
strum = "*"
strum_macros = "*"